--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -12,6 +12,9 @@ engines:
     enabled: true
   phpmd:
     enabled: true
+    checks:
+      Design/TooManyPublicMethods:
+        enabled: false
 ratings:
   paths:
   - "**.inc"
