--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "ayesh/case-insensitive-array",
     "description": "Class to store and access data in a case-insensitive fashion, while maintaining the integrity and functionality of a regular array.",
     "license": "MIT",
-    "keywords": ["polyfill", "shim", "compatibility", "portable", "mbstring"],
+    "keywords": ["array", "array access", "arrayaccess", "iterator", "case insensitive"],
     "homepage": "https://github.com/Ayesh/CaseInsensitiveArray",
     "authors": [
         {
@@ -11,7 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5"
+        "php": "^5.6 || ^7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "5.5.*"
