--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,5 @@ before_script:
   - travis_retry composer install --prefer-source --no-interaction --dev
 script:
   - phpunit
+after_success:
+- bash <(curl -s https://codecov.io/bash)
