Improve test suite settings - unified composer script to run tests, phpunit.xml.dist, travis config updates

--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,10 @@
         "psr-4": {
             "Ayesh\\CaseInsensitiveArray\\Test\\": "tests"
         }
+    },
+    "scripts": {
+        "test": [
+            " phpunit --coverage-clover=coverage.xml"
+        ]
     }
 }
