--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ before_script:
   - composer self-update
   - travis_retry composer install --prefer-source --no-interaction --dev
 script:
-  - vendor/bin/phpunit --coverage-clover=coverage.xml
+  - composer test
 after_success:
   - bash <(curl -s https://codecov.io/bash)
