--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": "^5.6 || ^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.5.7"
+        "phpunit/phpunit": "^5.5.7 | ^6.5 | ^7.0"
     },
     "autoload": {
         "psr-4": {
