--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
         }
     ],
     "require": {
-        "php": "^5.6 || ^7.0"
+        "php": "^7.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.5.7"
+        "phpunit/phpunit": "^7.3",
+        "phpstan/phpstan": "^0.10.3"
     },
     "autoload": {
         "psr-4": {
@@ -28,7 +29,8 @@
     },
     "scripts": {
         "test": [
-            " phpunit --coverage-clover=coverage.xml"
+            " phpunit --coverage-clover=coverage.xml",
+            " phpstan analyse src --level 7"
         ]
     }
 }
