--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: php
-php:
-  - 7.2
-  - 7.3
-  - nightly
+matrix:
+  include:
+    - php: 7.4
+    - php: 7.3
+    - php: nightly
+  allow_failures:
+    - php: nightly 
 
 before_script:
   - composer self-update
