--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ matrix:
   include:
     - php: 7.4
     - php: 7.3
+    - php: 7.2
     - php: nightly
   allow_failures:
-    - php: nightly 
+    - php: nightly
 
 before_script:
   - composer self-update
-  - travis_retry composer install --prefer-source --no-interaction --dev
+  - travis_retry composer install --prefer-dist --no-interaction
 script:
   - composer test
 after_success:
