--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 /.github           export-ignore
 /tests             export-ignore
 /phpunit.xml.dist  export-ignore
-/gitattributes     export-ignore
+/.gitattributes    export-ignore
+/.gitignore        export-ignore
