Update author email address

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "authors": [
         {
             "name": "Ayesh Karunaratne",
-            "email": "ayesh@ayesh.me"
+            "email": "ayesh@aye.sh"
         }
     ],
     "require": {
